--- a/PracticalWork1/PracticalWork1.tex
+++ b/PracticalWork1/PracticalWork1.tex
@@ -10,6 +10,8 @@
 \begin{document}
 \maketitle
 
+\bigskip
+
 \begin{itemize}
     \item Check if usth.edu.vn is up or not with ping (5 times only)
     
@@ -18,7 +20,14 @@
 \bigskip
 
 
- \item Use traceroute tool to find the route to usth.edu.vn
+ \item Use traceroute tool to find the route from VPS to usth.edu.vn
+ 
+\includegraphics[width=\linewidth]{VPStraceroute}
+
+\bigskip
+
+
+ \item Use traceroute tool to find the route from laptop to usth.edu.vn
  
 \includegraphics[width=\linewidth]{traceroute}
 
